--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,12 @@ div.nav a {
     font-weight: bold;
 }
 
+.subtitle {
+    color: gray;
+    text-transform: uppercase;
+    font-size: 11pt;
+}
+
 .download td {
     border: none;
     padding: 5px 20px 5px 0;
