--- a/lib/timeline/component/css/itemset.css
+++ b/lib/timeline/component/css/itemset.css
@@ -18,8 +18,7 @@
   position: absolute;
   width: 100%;
   height: 0;
-  left: 1px;
-  z-index: 1;
+  left: 0;
 }
 
 .vis.timeline  .foreground .group {
