updated background itemtype. No content is allowed now.

--- a/lib/timeline/component/css/item.css
+++ b/lib/timeline/component/css/item.css
@@ -72,6 +72,13 @@
   max-width: 100%;
   margin: 5px;
 }
+.vis.timeline .item.background .noContent {
+    position: absolute;
+    display: inline-block;
+    overflow: hidden;
+    max-width: 100%;
+    margin: 0px;
+}
 
 .vis.timeline .item.line {
   padding: 0;
