Fixed #459: content in range items may overflow range after zoom

--- a/lib/timeline/component/css/item.css
+++ b/lib/timeline/component/css/item.css
@@ -47,6 +47,7 @@
   border-style: solid;
   border-radius: 2px;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .vis.timeline .item.background {
@@ -62,7 +63,6 @@
   position: relative;
   display: inline-block;
   overflow: hidden;
-  max-width: 100%;
 }
 
 .vis.timeline .item.background .content {
