--- a/lib/timeline/component/css/timeaxis.css
+++ b/lib/timeline/component/css/timeaxis.css
@@ -1,15 +1,15 @@
-.vis.timeline .timeaxis {
+.vis-time-axis {
   position: relative;
   overflow: hidden;
 }
 
-.vis.timeline .timeaxis.foreground {
+.vis-time-axis.vis-foreground {
   top: 0;
   left: 0;
   width: 100%;
 }
 
-.vis.timeline .timeaxis.background {
+.vis-time-axis.vis-background {
   position: absolute;
   top: 0;
   left: 0;
@@ -17,14 +17,14 @@
   height: 100%;
 }
 
-.vis.timeline .timeaxis .text {
+.vis-time-axis .vis-text {
   position: absolute;
   color: #4d4d4d;
   padding: 3px;
   white-space: nowrap;
 }
 
-.vis.timeline .timeaxis .text.measure {
+.vis-time-axis .vis-text.vis-measure {
   position: absolute;
   padding-left: 0;
   padding-right: 0;
@@ -33,15 +33,15 @@
   visibility: hidden;
 }
 
-.vis.timeline .timeaxis .grid.vertical {
+.vis-time-axis .vis-grid.vis-vertical {
   position: absolute;
   border-left: 1px solid;
 }
 
-.vis.timeline .timeaxis .grid.minor {
+.vis-time-axis .vis-grid.vis-minor {
   border-color: #e5e5e5;
 }
 
-.vis.timeline .timeaxis .grid.major {
+.vis-time-axis .vis-grid.vis-major {
   border-color: #bfbfbf;
 }
